--- a/fitnesstrackertest-Gradle/src/main/resources/templates/displayHomePage.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/displayHomePage.html
@@ -1,11 +1,73 @@
 <html xmlns:th="https://www.thymeleaf.org/">
 
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<script th:inline="javascript">
+		console.log("Inise script tag");
+		$(function () {
+			console.log("Inside function");
+			loadWorkoutSummary();
+		});
+		function loadWorkoutSummary() {
+			console.log("loadWorkoutSummary");
+			$.ajax({
+				url: "summary",
+				method: "GET",
+				dataType: "json",
+				success: function (data) {
+					console.log("Get request success");
+					// Create a map to store the workouts by month-year
+					var workoutsByMonthYear = {};
 
+					// Iterate over the workout data and group by month-year
+					data.forEach(function (workout) {
+					 
+						
+						var dateObj = new Date(workout.date);
+						var monthYear = dateObj.toLocaleString('default', {month: 'long', year: 'numeric'});
+						console.log(monthYear);
+						if (!workoutsByMonthYear[monthYear]) {
+							workoutsByMonthYear[monthYear] = [];
+						}
+						workoutsByMonthYear[monthYear].push(workout);
+					});
+
+					// Create the summary HTML elements
+					var workoutSummaryDiv = $("#workout-summary");
+					Object.keys(workoutsByMonthYear).forEach(function (monthYear) {
+						var monthYearDiv = $("<div>").addClass("month-year").text(monthYear);
+						workoutSummaryDiv.append(monthYearDiv);
+
+						var workouts = workoutsByMonthYear[monthYear];
+						workouts.forEach(function (workout) {
+							var workoutDiv = $("<div>").addClass("workout");
+							var dateDiv = $("<div>").addClass("date").text(workout.date);
+							workoutDiv.append(dateDiv);
+
+							var setsDiv = $("<div>").addClass("sets");
+							workout.sets.forEach(function (set) {
+								var setDiv = $("<div>").addClass("set");
+								setDiv.append($("<span>").text(set.exercise.exerciseName));
+								setDiv.append($("<span>").text("Weight: " + set.weight));
+								setDiv.append($("<span>").text("Reps: " + set.reps));
+								setsDiv.append(setDiv);
+							});
+							workoutDiv.append(setsDiv);
+
+							monthYearDiv.append(workoutDiv);
+						});
+					});
+				},
+				error: function () {
+					console.log("Error retrieving workout data.");
+				}
+			});
+		}
+	</script>
 
 	<title>Home Page</title>
 	<style>
@@ -23,15 +85,18 @@
 			left: 0;
 			right: 0;
 			z-index: 100;
-			height:35px;
+			height: 35px;
 			background-color: #eaeaea;
-			justify-content:space-around;
+			justify-content: space-around;
 		}
 
 		#NavigationBlock {
 			display: flex;
-			justify-content:space-around;
+			justify-content: space-around;
 
+		}
+		#mainBlock{
+			margin-top:40px;
 		}
 	</style>
 </head>
@@ -41,17 +106,19 @@
 		<div>MYFITNESSBUDDY</div>
 		<div id="NavigationBlock">
 			<a href="">Summary</a>
-			<a th:href="@{'addWorkout?id='+${userId}}">Add Workout</a>
+			<a th:href="@{addWorkout}">Add Workout</a>
 			<a th:href="@{addSets}">Add Sets</a>
-			<a href="">Statistics</a>
+			<a th:href="@{statistics}">Statistics</a>
 			<a href="">Profile</a>
 			<a href="">Log out</a>
 		</div>
 	</div>
 	<div id="mainBlock">
-		
-		
+
+		<div id="workout-summary"></div>
+
 	</div>
+
 
 </body>
 
