--- a/fitnesstrackertest-Gradle/src/main/resources/templates/displayHomePage.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/displayHomePage.html
@@ -5,7 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+		rel="stylesheet">
 	<script th:inline="javascript">
 		console.log("Inise script tag");
 		$(function () {
@@ -22,11 +25,11 @@
 					console.log("Get request success");
 					// Create a map to store the workouts by month-year
 					var workoutsByMonthYear = {};
-
+					let weekdays = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
 					// Iterate over the workout data and group by month-year
 					data.forEach(function (workout) {
-					 
-						
+
+
 						var dateObj = new Date(workout.date);
 						var monthYear = dateObj.toLocaleString('default', {month: 'long', year: 'numeric'});
 						console.log(monthYear);
@@ -36,30 +39,100 @@
 						workoutsByMonthYear[monthYear].push(workout);
 					});
 
-					// Create the summary HTML elements
-					var workoutSummaryDiv = $("#workout-summary");
+
+
+
+					var workoutSummary = $("#workout-summary");
 					Object.keys(workoutsByMonthYear).forEach(function (monthYear) {
+						var workoutCount = 0;
+
+						var monthHeaderDiv = $("<div>").addClass("month-header");
+
+						//update month and year
 						var monthYearDiv = $("<div>").addClass("month-year").text(monthYear);
-						workoutSummaryDiv.append(monthYearDiv);
+						monthHeaderDiv.append(monthYearDiv);
 
+
+						var monthWorkoutDiv = $("<div>").addClass("month-workout-list");
 						var workouts = workoutsByMonthYear[monthYear];
+
 						workouts.forEach(function (workout) {
-							var workoutDiv = $("<div>").addClass("workout");
+							//calculate the number of workout done for that particular month
+							workoutCount++;
+
+							var eachWorkout = $("<div>").addClass("each-workout");
+							var dateObject = new Date(workout.date);
+							dayDate = dateObject.toLocaleString('default', {month: 'long', day: 'numeric'});
+							var dayDiv = $("<div>").addClass("each-workout__dayDate__day").text(weekdays[dateObject.getDay()]);
+							var date = $("<div>").addClass("each-workout__dayDate__date").text(dayDate);
+							var dayDateDiv = $("<div>").addClass("each-workout__dayDate");
+							dayDateDiv.append(dayDiv);
+							dayDateDiv.append(date);
+
+							eachWorkout.append(dayDateDiv);
+
+
+							/*var workoutDiv = $("<div>").addClass("workout");
 							var dateDiv = $("<div>").addClass("date").text(workout.date);
-							workoutDiv.append(dateDiv);
+							workoutDiv.append(dateDiv);*/
 
-							var setsDiv = $("<div>").addClass("sets");
-							workout.sets.forEach(function (set) {
-								var setDiv = $("<div>").addClass("set");
-								setDiv.append($("<span>").text(set.exercise.exerciseName));
-								setDiv.append($("<span>").text("Weight: " + set.weight));
-								setDiv.append($("<span>").text("Reps: " + set.reps));
-								setsDiv.append(setDiv);
+
+							var workoutOverviewDiv = $("<div>").addClass("each-workout__overview");
+
+							var workoutTypeDiv = $("<div>").addClass("each-workout__overview__workout-type").text(workout.workoutType + " Workout");
+							workoutOverviewDiv.append(workoutTypeDiv);
+
+							var exerciseListDiv = $("<div>").addClass("each-workout__overview__exercise-List");
+							//var setsDiv = $("<div>").addClass("sets");
+
+							//calculate the number of sets done for each exercise
+							var exerciseCount = {};
+							var exerciseSetList = {};
+							workout.sets.forEach(function (sets) {
+								if (!exerciseCount[sets.exercise.exerciseName]) {
+									exerciseCount[sets.exercise.exerciseName] = 0;
+									exerciseSetList[sets.exercise.exerciseName] = [];
+								}
+								exerciseCount[sets.exercise.exerciseName] += 1;
+								exerciseSetList[sets.exercise.exerciseName].push(sets);
+
 							});
-							workoutDiv.append(setsDiv);
 
-							monthYearDiv.append(workoutDiv);
+							Object.keys(exerciseCount).forEach(function (exerciseName) {
+								var exerciseSetDiv = $("<div>").addClass("each-workout__overview__exercise-List__sets");
+								var exerciseSetHoverDiv = $("<div>").addClass("each-workout__overview__exercise-List__set__hover");
+
+								var setCount = 1;
+								exerciseSetList[exerciseName].forEach(function (set) {
+
+									var setDiv = $("<div>").addClass("eachset-hover").text(exerciseName + "Set" + setCount + " Weight:" + set.weight + " Reps: " + set.reps + " Mins:" + set.minutes + " Distance: " + set.distance + " Kcal: " + set.Kcal);
+									exerciseSetHoverDiv.append(setDiv);
+									setCount++;
+
+								});
+
+
+								var data = exerciseCount[exerciseName] + "x " + exerciseName;
+								var exerciseNameDiv = $("<div>").text(data);
+
+								exerciseSetDiv.append(exerciseSetHoverDiv);
+								exerciseSetDiv.append(exerciseNameDiv);
+
+								exerciseListDiv.append(exerciseSetDiv);
+
+
+							});
+							workoutOverviewDiv.append(exerciseListDiv);
+							eachWorkout.append(workoutOverviewDiv);
+							var durationDiv = $("<div>").addClass("each-workout__duration").text(workout.duration + " min");
+							eachWorkout.append(durationDiv);
+							monthWorkoutDiv.append(eachWorkout);
 						});
+						var workoutCountDiv = $("<div>").text(workoutCount + " Workouts");
+						monthHeaderDiv.append(workoutCountDiv);
+						workoutSummary.append(monthHeaderDiv);
+						workoutSummary.append(monthWorkoutDiv);
+
 					});
 				},
 				error: function () {
@@ -80,30 +153,175 @@
 
 		#headerBlock {
 			display: flex;
+			justify-content: space-between;
 			position: fixed;
 			top: 0;
 			left: 0;
 			right: 0;
 			z-index: 100;
-			height: 35px;
-			background-color: #eaeaea;
-			justify-content: space-around;
+			height: 50px;
+			background-color: rgb(17, 15, 15);
+			border-bottom: 1px solid #dddddd;
+
+		}
+
+		#logoBlock {
+			color: white;
+			font-family: 'Oswald', sans-serif;
+			font-size: 22px;
+			font-weight: 700;
+			letter-spacing: 2.5px;
+			line-height: 3px;
+			margin-top: 4px;
+			margin-left: 20px;
+			padding-top: 20px;
+			padding-left: 20px;
+			width: 45%;
 		}
 
 		#NavigationBlock {
 			display: flex;
-			justify-content: space-around;
+			justify-content: space-between;
+			width: 55%;
+			color: white;
+			align-items: center;
+			vertical-align: middle;
+			margin-right: 20px;
+		}
+
+		#NavigationBlock a {
+			color: white;
+			text-decoration: none;
+			letter-spacing: 0.5px;
+			line-height: 1px;
+		}
+
+
+
+		#mainBlock {
+			margin-top: 55px;
 
 		}
-		#mainBlock{
-			margin-top:40px;
+
+		#workout-summary {
+			margin: 10px auto;
+			width: 75%;
+
+			border: 1px solid black;
+		}
+
+		.month-header {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			vertical-align: middle;
+			height: 60px;
+			font-size: 15px;
+			background-color: #f6f9fc;
+			font-weight: bold;
+
+		}
+
+		.each-workout {
+			display: flex;
+			justify-content: space-between;
+			border-bottom: 1px solid #dddddd;
+		}
+
+		.each-workout:hover {
+
+
+			/*cursor: pointer;
+			background-color: #f6f9fc;*/
+		}
+
+		.month-workout-list {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.each-workout__dayDate {
+			display: flex;
+			flex-direction: column;
+
+		}
+
+		.each-workout__dayDate__day {
+			color: darkgray;
+		}
+
+		.each-workout__dayDate__date {
+
+			font-weight: 500;
+		}
+
+		.each-workout__overview {
+			display: flex;
+			flex-direction: column;
+
+		}
+
+		.each-workout__overview__workout-type {
+			font-size: 22px;
+			font-weight: 500;
+		}
+
+		.each-workout__overview__exercise-List {
+			display: flex;
+			flex-direction: column;
+			font-style: italic;
+			font-weight: 400;
+		}
+
+		.each-workout__overview__exercise-List__sets {
+			position: relative;
+			cursor: pointer;
+			transition: all 0.5s;
+		}
+
+		.eachset-hover {
+			font-size: 14px;
+		}
+
+		.each-workout__overview__exercise-List__set__hover {
+			position: absolute;
+			top: 0;
+			left: 80%;
+			transform: translateX(10px);
+			width: max-content;
+			text-align: center;
+			border-radius: 5px;
+			padding: 5px;
+			visibility: hidden;
+			opacity: 0;
+			transition: all 0.5s;
+			background-color: grey;
+			color: #000;
+			z-index: 1;
+		}
+
+		.each-workout__overview__exercise-List__set__hover:before {
+
+			position: absolute;
+			content: "";
+			height: 10px;
+			width: 10px;
+			background: grey;
+			bottom: 50%;
+			left: 0px;
+			transform: translateX(-50%) rotate(45deg);
+		}
+
+		.each-workout__overview__exercise-List__sets:hover .each-workout__overview__exercise-List__set__hover {
+			visibility: visible;
+			opacity: 1;
 		}
 	</style>
 </head>
 
 <body>
 	<div id="headerBlock">
-		<div>MYFITNESSBUDDY</div>
+		<div id="logoBlock">MYFITNESSBUDDY</div>
 		<div id="NavigationBlock">
 			<a href="">Summary</a>
 			<a th:href="@{addWorkout}">Add Workout</a>
@@ -115,7 +333,10 @@
 	</div>
 	<div id="mainBlock">
 
-		<div id="workout-summary"></div>
+		<div id="workout-summary">
+
+
+		</div>
 
 	</div>
 
