--- a/fitnesstrackertest-Gradle/src/main/resources/templates/displaySignInPage.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/displaySignInPage.html
@@ -191,7 +191,7 @@
 				</div>
 			</form>
 			<div id="SignUpLink">
-				<p>New User? <a href="#">Sign Up</a></p>
+				<p>New User? <a th:href="@{SignUpPage}">Sign Up</a></p>
 			</div>
 
 		</div>
