--- a/fitnesstrackertest-Gradle/src/main/resources/templates/displaySignUpPage.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/displaySignUpPage.html
@@ -410,7 +410,7 @@
 
 			</div>
 			<div id="SignInLink">
-				<p>Already a User? <a href="#">Sign In</a></p>
+				<p>Already a User? <a th:href="@{SignInPage}">Sign In</a></p>
 			</div>
 
 		</div>
